--- a/UI_2022_R00/index.html
+++ b/UI_2022_R00/index.html
@@ -18,19 +18,32 @@
         <meta name="summary" content="BIMTECH Website Demo - Based on IFC standard" />
         <!--For Dark/Light mode Toggle-->
         <link rel="stylesheet" href="./assets/css/darklightToggle.css" />  
-        <script src="./assets/js/darklightToggle.js"></script>
+        <!-- <script id="rendered-js" src="./assets/js/darklightToggle.js"></script> -->
+        <!-- <script type="text/javascript" src="./assets/js/darklightToggle.js"></script> -->
         <!-- Favicon -->
         <link id='favicon' rel="shortcut icon" href="assets/images/favicon.png" type="image/x-png">
     </head>
 
-    <body>
-        <body translate="no" class="dark-theme">
-            <!--For Dark/Light mode Toggle-->
-            <div class="toggle">
-                <input type="checkbox" id="toggle" />
-                <label for="toggle"></label>
-            </div>
-        </body>
+    <body translate="no" class="">
+        <!--For Dark/Light mode Toggle-->
+        <div class="toggle">
+            <input type="checkbox" id="toggle" />
+            <label for="toggle"></label>
+        </div>
+        <script>
+            const toggle = document.getElementById('toggle');
+            const body = document.body;
+
+            toggle.addEventListener('input', (e) => {
+            const isChecked = e.target.checked;
+    
+            if(isChecked) {
+            body.classList.add('dark-theme');
+            } else {
+            body.classList.remove('dark-theme');
+            }
+            });
+        </script>
         
-    </body>
+    </body>     
 </html>
