Khoa_7th_Commit

--- a/Test_1/Samples/model-viewer.html
+++ b/Test_1/Samples/model-viewer.html
@@ -38,7 +38,7 @@
     </div>
 
     <!-- <iframe id="model-iframe" src="https://ifcjs.github.io/ifcjs-crash-course/sample-apps/01/" frameborder="0"></iframe> -->
-    <iframe id="model-iframe" src="http://127.0.0.1:5502/Test_1/Samples/01/index.html" frameborder="0"></iframe>
+    <iframe id="model-iframe" src="./01/index.html" frameborder="0"></iframe>
     <script type="module" src="./model-viewer.js"></script>
 </body>
 </html>
