--- a/Test_1/Samples/01/index.html
+++ b/Test_1/Samples/01/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="styles.css">
     <title>BIMTECH Test 01</title>
 </head>
+<style>
+    div.background{
+        opacity: 1;
+    }
+</style>
 <body>
-    <canvas id="three-canvas"></canvas>
 
-    <div id="viewer-container"></div>
-
+    <div id="viewer-container", class="background"></div>
     <div class="checkboxes">
         <div>
             <input checked="true" id="IFCWALLSTANDARDCASE" type="checkbox">
@@ -45,6 +48,6 @@
     </div>
 
 
-    <script src="bundle.js\main.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
