--- a/Test_1/Samples/01/index.html
+++ b/Test_1/Samples/01/index.html
@@ -45,6 +45,10 @@
             <input checked="true" id="IFCPLATE" type="checkbox">
             Curtain wall plates
         </div>
+        <div>
+            <input checked="true" id="IFCROOF" type="checkbox">
+            Roof
+        </div>
     </div>
 
 
