Khoa_9th_Commit

--- a/UI_2022_R00/index.html
+++ b/UI_2022_R00/index.html
@@ -107,6 +107,7 @@
                         -moz-border-radius: 15px;
                         border-radius: 15px;
                         float: left;
+                        left: 5%;
                         overflow: hidden;"
                     class="responsive-iframe"
                     src="..\Test_1\Samples\01\index.html" 
@@ -116,17 +117,26 @@
                     allowtransparency="true"
                     allowfullscreen>
                 </iframe>
-
+                <div
+                    class="text header"
+                    style="
+                        margin-top: 5%;
+                        float: right;
+                        left: 80%;
+                        ">
+                    Marketplace for Interior Suppliers <br> 
+                    Experiences AR and 3D views at your own place. Designs your rooms and explore how things work. 
+                </div>
                 <div 
                     class="text header" 
                     style="
                         margin-top: 10%;
                         float: right;
                         left: 80%;
-                        ">nice to meet you!<span></span>
+                        "><span></span>
                     <div class="center">
                         <div>
-                            <img src="./assets/svg/ifcjs-logo.svg" alt="" class="rounded-circle" height="200" width="200">
+                            <!-- <img src="./assets/svg/ifcjs-logo.svg" alt="" class="rounded-circle" height="200" width="200"> -->
                         </div>
                         <br/>
                         <span style="display: inline;" id="particles-js">We are into <span class="animated-text center"
@@ -406,6 +416,7 @@
         <!--JavaScript at end of body for optimized loading-->
         <script src="./assets/js/app.js"></script>
         <script src="./assets/js/particle.js"></script>
+        <script src="./assets/js/particles.js"></script>
 
     </body>
 
