Khoa_10th_Commit

--- a/Test_1/Samples/01/index.html
+++ b/Test_1/Samples/01/index.html
@@ -8,46 +8,62 @@
     <link rel="stylesheet" href="styles.css">
     <title>BIMTECH Test 01</title>
 </head>
-<style>
+<!-- <style>
     div.background{
         opacity: 1;
     }
-</style>
+</style> -->
 <body>
 
     <div id="viewer-container", class="background"></div>
     <div class="checkboxes">
         <div>
+            <label>
             <input checked="true" id="IFCWALLSTANDARDCASE" type="checkbox">
-            Walls
+            <span class="checkboxes_text">Walls</span>
+            </label>
         </div>
         <div>
+            <label>
             <input checked="true" id="IFCSLAB" type="checkbox">
-            Slabs
+            <span class="checkboxes_text">Slabs</span>
+            </label>
         </div>
         <div>
+            <label>
             <input checked="true" id="IFCWINDOW" type="checkbox">
-            Windows
+            <span class="checkboxes_text">Windows</span>
+            </label>
         </div>
         <div>
+            <label>
             <input checked="true" id="IFCFURNISHINGELEMENT" type="checkbox">
-            Furniture
+            <span class="checkboxes_text">Furniture</span>
+            </label>
         </div>
         <div>
+            <label>
             <input checked="true" id="IFCDOOR" type="checkbox">
-            Doors
+            <span class="checkboxes_text">Doors</span>
+            </label>
         </div>
         <div>
+            <label>
             <input checked="true" id="IFCMEMBER" type="checkbox">
-            Curtain wall structure
+            <span class="checkboxes_text">Curtain wall structure</span>
+            </label>
         </div>
         <div>
+            <label>
             <input checked="true" id="IFCPLATE" type="checkbox">
-            Curtain wall plates
+            <span class="checkboxes_text">Curtain wall plates</span>
+            </label>
         </div>
         <div>
+            <label>
             <input checked="true" id="IFCROOF" type="checkbox">
-            Roof
+            <span class="checkboxes_text">Roof</span>
+            </label>
         </div>
     </div>
 
