Khoa_12th_Commit

--- a/UI_2022_R00/index.html
+++ b/UI_2022_R00/index.html
@@ -95,13 +95,13 @@
                         xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" 
                         x="0px" 
                         y="0px" 
-                        viewBox="0 0 900 111" 
-                        style="enable-background:new 0 0 900 111;"
+                        viewBox="0 0 1200 111" 
+                        style="enable-background:new 0 0 1200 111;"
                         xml:space="preserve">
                     <path   class="border"
-                            d="M450,108.5h-280c-29.3,0-53-23.7-53-53v0c0-29.3,23.7-53,53-53h450"/>
+                            d="M600,108.5h-580c-29.3,0-53-23.7-53-53v0c0-29.3,23.7-53,53-53h600"/>
                     <path   class="border" 
-                            d="M450,108.5h280c29.3,0,53-23.7,53-53v0c0-29.3-23.7-53-53-53h-450"/>
+                            d="M600,108.5h580c29.3,0,53-23.7,53-53v0c0-29.3-23.7-53-53-53h-600"/>
                 </svg>   
                 <div class="go-icon">
                     <i class="fa fa-arrow-right"></i>
@@ -113,11 +113,11 @@
                     <!-- <li class="nav-item nav-item-hover"><a class="nav-link" href="index.html">Home</a></li> -->
                     <li class="nav-item nav-item-hover"><a class="nav-link" href="browse.html">Browse</a></li>
                     <li class="nav-item nav-item-hover"><a class="nav-link" href="collection.html">Collection</a></li>
-                    <li class="nav-item nav-item-hover"><a class="nav-link" href="designmine.html">Design mine</a></li>
+                    <li class="nav-item nav-item-hover"><a class="nav-link" href="designmine.html">my Spacor</a></li>
                     <li class="nav-item nav-item-hover"><a class="nav-link" href="supplier.html">Supplier</a></li>
                     <li class="nav-item nav-item-hover"><a class="nav-link" href="contact.html">Contact</a></li>
                     <li class="nav-item">
-                        <input type="checkbox" id="dark_toggler" class="dark_toggler" aria-label="Toggle Light Mode" onclick="toggle_light_mode()" checked>
+                        <input type="checkbox" id="dark_toggler" class="dark_toggler" aria-label="Toggle Light Mode" onclick="toggle_light_mode()">
                     </li>
                 </ul>
             </div>
@@ -139,7 +139,7 @@
                         top: 200px;
                         width: 60%;
                         height: 60%;
-                        border: 2px hidden rgba(39, 94, 245, 0.164);
+                        border: 2px hidden rgba(255, 255, 255, 0.164);
                         -moz-border-radius: 15px;
                         border-radius: 15px;
                         float: left;
