Khoa_13th_Commit

--- a/UI_2022_R00/index.html
+++ b/UI_2022_R00/index.html
@@ -40,6 +40,9 @@
         <script defer src="./assets/js/searchbar.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+        <!-- Marketplace Navigation Bar -->
+        <link rel="stylesheet" href="./assets/css/marketplace.css">
+
         <!-- Import Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/home.css">
@@ -121,6 +124,18 @@
                     </li>
                 </ul>
             </div>
+        </nav>
+
+        <!-- Marketplace Navigation -->
+        <nav class="Marketplace_Nav">
+            <ul class="Marketplace_ul">
+                <li id="one"><a href="">Foldable Desk</a></li>
+                <li id="one"><a href="">Lamp</a></li>
+                <li id="one"><a href="">Dining Table</a></li>
+                <li id="one"><a href="">Decorative Tray</a></li>
+                <li id="one"><a href="">Kitchen</a></li>
+                <li id="one"><a href="">Office</a></li>
+            </ul>
         </nav>
 
         <!-- Scroll Page -->
