commit_st2_HIEU

--- a/hoctap/hieu/index.html
+++ b/hoctap/hieu/index.html
@@ -1,55 +1,33 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <!-- <style type=text/css>   
-            body   
-            {  
-            height: 125vh;  
-            margin-top: 80px;  
-            padding: 30px;  
-            background-size: cover;  
-            font-family: sans-serif;  
-            }  
-            header {  
-            background-color: orange;  
-            position: fixed;  
-            left: 0;  
-            right: 0;  
-            top: 5px;  
-            height: 30px;  
-            display: flex;  
-            align-items: center;  
-            box-shadow: 0 0 25px 0 black;  
-            }  
-            header * {  
-            display: inline;  
-            }  
-            header li {  
-            margin: 20px;  
-            }  
-            header li a {  
-            color: blue;  
-            text-decoration: none;  
-            } 
-        </style>  -->
     </head>
     <body>
         <header>
         <nav class="htext">
-            <ul>
+            <ul class="navleft">
                 <li>
-                    <a href="#">home</a> 
+                    <a href="#">HOME</a> 
                 </li>
                 <li>
-                    <a href="#">service</a>
+                    <a href="#">SERVICE</a>
                 </li>
                 <li>
-                    <a href="#">about</a>
+                    <a href="#">ABOUT</a>
                 </li>
                 <li>
-                    <a href="#">contact</a>
+                    <a href="#">CONTACT</a>
                 </li>
             </ul>
+            <ul class="navright">
+                <li>
+                    <a href="#">LANGUAGE</a>
+                </li>
+                <LI>
+                    <a href="#">SIGN UP</a>
+                </LI>
+            </ul>
+            <img class="logo" src="logo1.png">
         </nav>
     </header>
     </body>
