--- a/hoctap/TP Website Demo/index.html
+++ b/hoctap/TP Website Demo/index.html
@@ -16,7 +16,7 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <ul class="navber__menu">
+            <ul class="navbar__menu">
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">Home</a>
                 </li>
@@ -30,6 +30,14 @@
                     <a href="/" class="button">Sign up</a>
                 </li>
             </ul>
+
+
+            <!-- <li><a href="Home.html">Home</a></li>
+            <li><a href="Tech.html">Tech</a></li>
+            <li><a href="Products.html">Products</a></li>
+            <li><a href="Sign up.html">Sign up</a></li> -->
+
+
         </div>
     </nav>
     <script src="app.js"></script>
