--- a/AR/src/index.html
+++ b/AR/src/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../static/libs/mindar/mindar-image-three.prod.js"></script>
+    <script src="./mindar-image-three.prod.js"></script>
     <script src="./main.js"></script>
     <style>
       html, body {position: relative; margin: 0; width: 100%; height: 100%; overflow: hidden}
