--- a/MERN/frontend/public/index.html
+++ b/MERN/frontend/public/index.html
@@ -25,11 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>BIMTech - Professional BIM solutions and Construction devices</title>
-    
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="margin-bottom: 170px"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,4 +41,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <div id="footer">
+  </div>
 </html>
